fix: adaptive base page layout padding on small devices

--- a/client/src/shared/components/BasePageLayout/BasePageLayout.module.css
+++ b/client/src/shared/components/BasePageLayout/BasePageLayout.module.css
@@ -33,3 +33,9 @@
     height: auto;
   }
 }
+
+@media (max-width: 380px) {
+  .menuSection {
+    padding: 5vw;
+  }
+}
